Code refactoring is a current shit show that needs some serious work
